--- a/less/home.less
+++ b/less/home.less
@@ -52,7 +52,6 @@
 						width: 350px;
 					}
 
-					&.news-fds-23,
 					&.news-gw190814-article,
 					&.news-share-my-space-calm-mtos {
 						img {
@@ -117,13 +116,13 @@
 								max-height: 100px;
 								margin: 20px;
 								width: auto;
-								background: transparent !important;
+								background: transparent;
+								animation: none;
 							}
 						}
 					}
 					&.news-portraits-1-start {
 						img {
-							max-height: 220px;
 							margin: 10px;
 						}
 					}
@@ -134,7 +133,6 @@
 					}
 					&.news-ecl-vr {
 						img {
-							height: 200px;
 							margin: 10px;
 						}
 						@media (max-width: @xs-sm) {
@@ -158,6 +156,7 @@
 					&.news-varphy-exhib {
 						.varphy-spoiler {
 							margin-bottom: 10px;
+							
 							img {
 								width: 180px;
 								margin: 10px;
